Redoing the styling for the index and Beulah pages
I intend to restyle the other cemeteries and cleanup their html soon.

--- a/_includes/mcr/header.html
+++ b/_includes/mcr/header.html
@@ -1,31 +1,33 @@
-
-<ul>
-  <li><a href="adrianc.htm">Adrian Monument</a></li>
-  <li><a href="Beulahc.htm">Beulah Cemetery</a></li>
-  <li><a href="Broganc.htm">Brogan Cemetery</a></li>
-  <li><a href="Dellc.htm">Dell Cemetery</a></li>
-  <li><a href="EVERGC.HTM">Evergreen Cemetery</a></li>
-  <li><a href="Fairviewc.htm">Fairview Cemetery</a></li>
-  <li><a href="fairviewcemetery.pdf">Fairview Cemetery</a>-Updated (PDF File)</li> 
-  <li><a href="Harperc.htm">Harper Cemetery</a></li>
-  <li><a href="ironsidec.htm">Ironside Cemetery</a></li>
-  <li><a href="jordanvalleyc.htm">Jordan Valley Cemetery</a></li>
-  <li><a href="littlefieldc.htm">Littlefield Cemetery</a></li>
-  <li><a href="Malheurcityc.htm">Malheur City Cemetery</a></li>
-  <li><a href="newjuntura.htm">New Juntura Cemetery</a></li>
-  <li><a href="NYSSA.HTM">Nyssa Cemetery</a></li>
-  <li><a href="oldjuntura.htm">Old Juntura Cemetery</a></li>
-  <li><a href="owyheec.htm">Owyhee Cemetery</a></li>
-  <li><a href="pioneeroc.htm">Pioneer Cemetery - Ontario</a></li>
-  <li><a href="pioneervc.htm">Pioneer Cemetery - Vale</a></li>
-  <li><a href="riverside.htm">Riverside Cemetery</a></li>
-  <li><a href="succorcreekc.htm">Succor Creek</a></li>
-  <li><a href="sunsetc.htm">Sunset Cemetery</a></li>
-  <li><a href="valleyviewc.htm">Valley View Cemetery</a></li>
-  <li><a href="watsonc.htm">Watson Cemetery</a></li>
-  <li><a href="westfallc.htm">Westfall Cemetery</a></li>
-  <li><a href="miscgrav.htm">Miscellaneous Graves</a>
-</ul>
-<ul>
-   <li><a href="deathnotices.htm">Abstracts of Death Records</a></li>
-</ul>
+<div class="mcr-titleBar"> Malheur County Records </div>
+<div class="mcr-nav">
+	<ul>
+	  <li><a href="adrianc.htm">Adrian Monument</a></li>
+	  <li><a href="Beulahc.htm">Beulah Cemetery</a></li>
+	  <li><a href="Broganc.htm">Brogan Cemetery</a></li>
+	  <li><a href="Dellc.htm">Dell Cemetery</a></li>
+	  <li><a href="EVERGC.HTM">Evergreen Cemetery</a></li>
+	  <li><a href="Fairviewc.htm">Fairview Cemetery</a></li>
+	  <li><a href="fairviewcemetery.pdf">Fairview Cemetery</a>-Updated (PDF File)</li> 
+	  <li><a href="Harperc.htm">Harper Cemetery</a></li>
+	  <li><a href="ironsidec.htm">Ironside Cemetery</a></li>
+	  <li><a href="jordanvalleyc.htm">Jordan Valley Cemetery</a></li>
+	  <li><a href="littlefieldc.htm">Littlefield Cemetery</a></li>
+	  <li><a href="Malheurcityc.htm">Malheur City Cemetery</a></li>
+	  <li><a href="newjuntura.htm">New Juntura Cemetery</a></li>
+	  <li><a href="NYSSA.HTM">Nyssa Cemetery</a></li>
+	  <li><a href="oldjuntura.htm">Old Juntura Cemetery</a></li>
+	  <li><a href="owyheec.htm">Owyhee Cemetery</a></li>
+	  <li><a href="pioneeroc.htm">Pioneer Cemetery - Ontario</a></li>
+	  <li><a href="pioneervc.htm">Pioneer Cemetery - Vale</a></li>
+	  <li><a href="riverside.htm">Riverside Cemetery</a></li>
+	  <li><a href="succorcreekc.htm">Succor Creek</a></li>
+	  <li><a href="sunsetc.htm">Sunset Cemetery</a></li>
+	  <li><a href="valleyviewc.htm">Valley View Cemetery</a></li>
+	  <li><a href="watsonc.htm">Watson Cemetery</a></li>
+	  <li><a href="westfallc.htm">Westfall Cemetery</a></li>
+	  <li><a href="miscgrav.htm">Miscellaneous Graves</a>
+	</ul>
+	<ul>
+	   <li><a href="deathnotices.htm">Abstracts of Death Records</a></li>
+	</ul>
+</div>
