--- a/_layouts/mcr_layout.html
+++ b/_layouts/mcr_layout.html
@@ -3,7 +3,9 @@
   {% include mcr/head.html %}
   <body>
     {% include mcr/header.html %}
-    {{ content }}
+    <div class="mcr-content">
+        {{ content }}
+    </div>
     {% include mcr/footer.html %}
   </body>
 </html>
