More progress towards this cleanup/redesign.

--- a/_includes/mcr/header.html
+++ b/_includes/mcr/header.html
@@ -5,7 +5,7 @@
 	  <li><a href="Beulahc.html">Beulah Cemetery</a></li>
 	  <li><a href="Broganc.html">Brogan Cemetery</a></li>
 	  <li><a href="Dellc.html">Dell Cemetery</a></li>
-	  <li><a href="EVERGC.HTML">Evergreen Cemetery</a></li>
+	  <li><a href="evergc.html">Evergreen Cemetery</a></li>
 	  <li><a href="Fairviewc.html">Fairview Cemetery</a></li>
 	  <li><a href="fairviewcemetery.pdf">Fairview Cemetery</a>-Updated (PDF File)</li> 
 	  <li><a href="Harperc.html">Harper Cemetery</a></li>
@@ -14,7 +14,7 @@
 	  <li><a href="littlefieldc.html">Littlefield Cemetery</a></li>
 	  <li><a href="Malheurcityc.html">Malheur City Cemetery</a></li>
 	  <li><a href="newjuntura.html">New Juntura Cemetery</a></li>
-	  <li><a href="NYSSA.HTML">Nyssa Cemetery</a></li>
+	  <li><a href="nyssa.html">Nyssa Cemetery</a></li>
 	  <li><a href="oldjuntura.html">Old Juntura Cemetery</a></li>
 	  <li><a href="owyheec.html">Owyhee Cemetery</a></li>
 	  <li><a href="pioneeroc.html">Pioneer Cemetery - Ontario</a></li>
